--- a/TransCore/TransCore.vcxproj.filters
+++ b/TransCore/TransCore.vcxproj.filters
@@ -34,23 +34,44 @@
     <Filter Include="Human Space Library\Characters">
       <UniqueIdentifier>{dbe8cf34-7bb0-4df2-a8c4-5578f693ba9a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Human Space Library\Commonwealth Fleet">
-      <UniqueIdentifier>{2a2f1032-cd48-4b41-a38a-38b029905090}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Human Space Library\Commonwealth Militia">
-      <UniqueIdentifier>{dbfea604-ebb1-4f1c-a164-4f726aa728c2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Human Space Library\Corporate Hierarchy">
-      <UniqueIdentifier>{8f38a4f7-d0dc-4b9d-9a73-26d59d9defe9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Human Space Library\Commonwealth">
-      <UniqueIdentifier>{4841bfd2-a67e-44c5-b420-8578299339e6}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Human Space Library\Korolov Shipping">
-      <UniqueIdentifier>{b04f8c8f-53ab-4024-b123-f5ee2b24f189}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Human Space Library\Eridani">
       <UniqueIdentifier>{94156faf-ceb4-48b0-a89b-172afb19a909}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Human Space Library\Encounters\Black Market">
+      <UniqueIdentifier>{5e1c42af-292d-430e-bb05-b469c331a8e7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Human Space Library\Encounters\Korolov Shipping">
+      <UniqueIdentifier>{b04f8c8f-53ab-4024-b123-f5ee2b24f189}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Human Space Library\Encounters\Commonwealth Fleet">
+      <UniqueIdentifier>{2a2f1032-cd48-4b41-a38a-38b029905090}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Human Space Library\Encounters\Commonwealth">
+      <UniqueIdentifier>{4841bfd2-a67e-44c5-b420-8578299339e6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Human Space Library\Encounters\Commonwealth Militia">
+      <UniqueIdentifier>{dbfea604-ebb1-4f1c-a164-4f726aa728c2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Human Space Library\Encounters\Corporate Hierarchy">
+      <UniqueIdentifier>{8f38a4f7-d0dc-4b9d-9a73-26d59d9defe9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Human Space Library\Encounters\Battle Arena">
+      <UniqueIdentifier>{17b55370-2fac-4749-99d5-6e4d8bb6ef01}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Human Space Library\Encounters\Charon Pirates">
+      <UniqueIdentifier>{1236f70a-8cee-4f37-bb66-3ffdd7be825e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Human Space Library\Encounters\St Katharines">
+      <UniqueIdentifier>{5c5bdacd-627e-4c19-8a98-3e14216c61ef}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Human Space Library\Encounters\Sisters">
+      <UniqueIdentifier>{2dee5eed-6a06-4261-a4c4-87d876d17953}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Human Space Library\Encounters\Huari">
+      <UniqueIdentifier>{ccad0110-f465-40d2-874f-409983752c4b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Human Space Library\Encounters\Teratons">
+      <UniqueIdentifier>{95e56c36-5b2d-4c56-95f4-a524716c4ce5}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -130,9 +151,6 @@
     <None Include="Elysium.xml">
       <Filter>Part I</Filter>
     </None>
-    <None Include="Huari.xml">
-      <Filter>Part I</Filter>
-    </None>
     <None Include="PlayerShips.xml">
       <Filter>Part I</Filter>
     </None>
@@ -202,22 +220,7 @@
     <None Include="AresOrthodoxy.xml">
       <Filter>Human Space Library\Encounters</Filter>
     </None>
-    <None Include="BattleArena.xml">
-      <Filter>Human Space Library\Star Systems</Filter>
-    </None>
-    <None Include="BattleArenaGladiators.xml">
-      <Filter>Human Space Library\Star Systems</Filter>
-    </None>
-    <None Include="BlackMarket.xml">
-      <Filter>Human Space Library\Encounters</Filter>
-    </None>
     <None Include="CentauriWarlords.xml">
-      <Filter>Human Space Library\Encounters</Filter>
-    </None>
-    <None Include="CharonFortress.xml">
-      <Filter>Human Space Library\Star Systems</Filter>
-    </None>
-    <None Include="CharonPirates.xml">
       <Filter>Human Space Library\Encounters</Filter>
     </None>
     <None Include="Code.xml">
@@ -262,9 +265,6 @@
     <None Include="RogueFleet.xml">
       <Filter>Human Space Library\Encounters</Filter>
     </None>
-    <None Include="SistersOfDomina.xml">
-      <Filter>Human Space Library\Encounters</Filter>
-    </None>
     <None Include="StdArmor.xml">
       <Filter>Human Space Library\Items</Filter>
     </None>
@@ -304,13 +304,7 @@
     <None Include="StdUnknownItems.xml">
       <Filter>Human Space Library\Items</Filter>
     </None>
-    <None Include="StKatharines.xml">
-      <Filter>Human Space Library\Star Systems</Filter>
-    </None>
     <None Include="SungSlavers.xml">
-      <Filter>Human Space Library\Encounters</Filter>
-    </None>
-    <None Include="Teratons.xml">
       <Filter>Human Space Library\Encounters</Filter>
     </None>
     <None Include="Tinkers.xml">
@@ -323,40 +317,67 @@
       <Filter>Human Space Library\Items</Filter>
     </None>
     <None Include="CommonwealthFleet.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </None>
     <None Include="CommonwealthMilitia.xml">
-      <Filter>Human Space Library\Commonwealth Militia</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Militia</Filter>
     </None>
     <None Include="KorolovShipping.xml">
-      <Filter>Human Space Library\Korolov Shipping</Filter>
+      <Filter>Human Space Library\Encounters\Korolov Shipping</Filter>
     </None>
     <None Include="CorporateHierarchy.xml">
-      <Filter>Human Space Library\Corporate Hierarchy</Filter>
+      <Filter>Human Space Library\Encounters\Corporate Hierarchy</Filter>
     </None>
     <None Include="Rasiermesser.xml">
-      <Filter>Human Space Library\Corporate Hierarchy</Filter>
+      <Filter>Human Space Library\Encounters\Corporate Hierarchy</Filter>
     </None>
     <None Include="Commonwealth.xml">
-      <Filter>Human Space Library\Commonwealth</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth</Filter>
     </None>
     <None Include="CommonwealthAgricultural.xml">
-      <Filter>Human Space Library\Commonwealth</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth</Filter>
     </None>
     <None Include="CommonwealthMetropolis.xml">
-      <Filter>Human Space Library\Commonwealth</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth</Filter>
     </None>
     <None Include="CommonwealthMining.xml">
-      <Filter>Human Space Library\Commonwealth</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth</Filter>
     </None>
     <None Include="PointJuno.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </None>
     <None Include="Antarctica.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </None>
     <None Include="Eridani.xml">
       <Filter>Human Space Library\Eridani</Filter>
+    </None>
+    <None Include="BlackMarket.xml">
+      <Filter>Human Space Library\Encounters\Black Market</Filter>
+    </None>
+    <None Include="BattleArena.xml">
+      <Filter>Human Space Library\Encounters\Battle Arena</Filter>
+    </None>
+    <None Include="BattleArenaGladiators.xml">
+      <Filter>Human Space Library\Encounters\Battle Arena</Filter>
+    </None>
+    <None Include="CharonFortress.xml">
+      <Filter>Human Space Library\Encounters\Charon Pirates</Filter>
+    </None>
+    <None Include="CharonPirates.xml">
+      <Filter>Human Space Library\Encounters\Charon Pirates</Filter>
+    </None>
+    <None Include="StKatharines.xml">
+      <Filter>Human Space Library\Encounters\St Katharines</Filter>
+    </None>
+    <None Include="SistersOfDomina.xml">
+      <Filter>Human Space Library\Encounters\Sisters</Filter>
+    </None>
+    <None Include="Huari.xml">
+      <Filter>Human Space Library\Encounters\Huari</Filter>
+    </None>
+    <None Include="Teratons.xml">
+      <Filter>Human Space Library\Encounters\Teratons</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -429,9 +450,6 @@
     <Xml Include="Penitents.xml">
       <Filter>Human Space Library\Encounters</Filter>
     </Xml>
-    <Xml Include="Sanctuary.xml">
-      <Filter>Human Space Library\Star Systems</Filter>
-    </Xml>
     <Xml Include="StdMiningEquipment.xml">
       <Filter>Human Space Library\Items</Filter>
     </Xml>
@@ -448,70 +466,70 @@
       <Filter>Human Space Library\Characters</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMission01.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMission02.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMission03.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMission04.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMission05.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMission06.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMission07.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMission08.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMission09.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMission10.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMission11.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMissionLL01.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthFleetMissionLL02.xml">
-      <Filter>Human Space Library\Commonwealth Fleet</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Fleet</Filter>
     </Xml>
     <Xml Include="CommonwealthMilitiaMission04.xml">
-      <Filter>Human Space Library\Commonwealth Militia</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Militia</Filter>
     </Xml>
     <Xml Include="CommonwealthMilitiaMission01.xml">
-      <Filter>Human Space Library\Commonwealth Militia</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Militia</Filter>
     </Xml>
     <Xml Include="CommonwealthMilitiaMission02.xml">
-      <Filter>Human Space Library\Commonwealth Militia</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Militia</Filter>
     </Xml>
     <Xml Include="CommonwealthMilitiaMission03.xml">
-      <Filter>Human Space Library\Commonwealth Militia</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth Militia</Filter>
     </Xml>
     <Xml Include="KSMission03.xml">
-      <Filter>Human Space Library\Korolov Shipping</Filter>
+      <Filter>Human Space Library\Encounters\Korolov Shipping</Filter>
     </Xml>
     <Xml Include="KronosaurusMission01.xml">
-      <Filter>Human Space Library\Korolov Shipping</Filter>
+      <Filter>Human Space Library\Encounters\Korolov Shipping</Filter>
     </Xml>
     <Xml Include="KSMission01.xml">
-      <Filter>Human Space Library\Korolov Shipping</Filter>
+      <Filter>Human Space Library\Encounters\Korolov Shipping</Filter>
     </Xml>
     <Xml Include="KSMission02.xml">
-      <Filter>Human Space Library\Korolov Shipping</Filter>
+      <Filter>Human Space Library\Encounters\Korolov Shipping</Filter>
     </Xml>
     <Xml Include="CommonwealthShips.xml">
-      <Filter>Human Space Library\Commonwealth</Filter>
+      <Filter>Human Space Library\Encounters\Commonwealth</Filter>
     </Xml>
     <Xml Include="RPGCommoditiesExchange.xml">
       <Filter>RPG Library</Filter>
@@ -521,6 +539,72 @@
     </Xml>
     <Xml Include="RaisuStation.xml">
       <Filter>Human Space Library\Eridani</Filter>
+    </Xml>
+    <Xml Include="BlackMarketMission00.xml">
+      <Filter>Human Space Library\Encounters\Black Market</Filter>
+    </Xml>
+    <Xml Include="BlackMarketMission01.xml">
+      <Filter>Human Space Library\Encounters\Black Market</Filter>
+    </Xml>
+    <Xml Include="CommonwealthMilitiaMissionSK01.xml">
+      <Filter>Human Space Library\Encounters\Commonwealth Militia</Filter>
+    </Xml>
+    <Xml Include="BattleArenaKidnapped.xml">
+      <Filter>Human Space Library\Encounters\Battle Arena</Filter>
+    </Xml>
+    <Xml Include="BattleArenaMelee.xml">
+      <Filter>Human Space Library\Encounters\Battle Arena</Filter>
+    </Xml>
+    <Xml Include="Dall01.xml">
+      <Filter>Human Space Library\Encounters\St Katharines</Filter>
+    </Xml>
+    <Xml Include="Sanctuary.xml">
+      <Filter>Human Space Library\Encounters\Sisters</Filter>
+    </Xml>
+    <Xml Include="HuariMission01.xml">
+      <Filter>Human Space Library\Encounters\Huari</Filter>
+    </Xml>
+    <Xml Include="HuariMission02.xml">
+      <Filter>Human Space Library\Encounters\Huari</Filter>
+    </Xml>
+    <Xml Include="HuariMission03.xml">
+      <Filter>Human Space Library\Encounters\Huari</Filter>
+    </Xml>
+    <Xml Include="HuaramarcaMission07.xml">
+      <Filter>Part I</Filter>
+    </Xml>
+    <Xml Include="Huaramarca.xml">
+      <Filter>Part I</Filter>
+    </Xml>
+    <Xml Include="HuaramarcaMission01.xml">
+      <Filter>Part I</Filter>
+    </Xml>
+    <Xml Include="HuaramarcaMission02.xml">
+      <Filter>Part I</Filter>
+    </Xml>
+    <Xml Include="HuaramarcaMission03.xml">
+      <Filter>Part I</Filter>
+    </Xml>
+    <Xml Include="HuaramarcaMission04.xml">
+      <Filter>Part I</Filter>
+    </Xml>
+    <Xml Include="HuaramarcaMission05.xml">
+      <Filter>Part I</Filter>
+    </Xml>
+    <Xml Include="HuaramarcaMission06.xml">
+      <Filter>Part I</Filter>
+    </Xml>
+    <Xml Include="Kronosaurus.xml">
+      <Filter>Human Space Library\Encounters\Charon Pirates</Filter>
+    </Xml>
+    <Xml Include="KSMissionC01.xml">
+      <Filter>Human Space Library\Encounters\Korolov Shipping</Filter>
+    </Xml>
+    <Xml Include="KSMissionC02.xml">
+      <Filter>Human Space Library\Encounters\Korolov Shipping</Filter>
+    </Xml>
+    <Xml Include="TeratonResearch.xml">
+      <Filter>Human Space Library\Encounters\Teratons</Filter>
     </Xml>
   </ItemGroup>
 </Project>
