Command UI progress

--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -413,6 +413,7 @@
     <ClCompile Include="CKeyboardMapSession.cpp" />
     <ClCompile Include="CLoadGameWithSignInTask.cpp" />
     <ClCompile Include="CLRSDisplay.cpp" />
+    <ClCompile Include="CManeuverController.cpp" />
     <ClCompile Include="CodeChainExtensions.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
       <Optimization Condition="'$(Configuration)|$(Platform)'=='SteamDebug|Win32'">Disabled</Optimization>
