--- a/TransCore/TransCore.vcxproj.filters
+++ b/TransCore/TransCore.vcxproj.filters
@@ -609,5 +609,11 @@
     <Xml Include="KorolovFreighters.xml">
       <Filter>Human Space Library\Korolov Shipping</Filter>
     </Xml>
+    <Xml Include="RPGCommonText.xml">
+      <Filter>RPG Library</Filter>
+    </Xml>
+    <Xml Include="RPGUsefulItems.xml">
+      <Filter>RPG Library</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
