--- a/TransCore/TransCore.vcxproj.filters
+++ b/TransCore/TransCore.vcxproj.filters
@@ -618,5 +618,8 @@
     <Xml Include="Dantalion.xml">
       <Filter>Human Space Library\Commonwealth Fleet</Filter>
     </Xml>
+    <Xml Include="CoreItems.xml">
+      <Filter>Core Types</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
