--- a/TransData/TransData.vcxproj
+++ b/TransData/TransData.vcxproj
@@ -309,6 +309,7 @@
   <ItemGroup>
     <ClCompile Include="Armor.cpp" />
     <ClCompile Include="Attributes.cpp" />
+    <ClCompile Include="CHost.cpp" />
     <ClCompile Include="CImageGrid.cpp" />
     <ClCompile Include="CItemTypeTable.cpp" />
     <ClCompile Include="Compile.cpp" />
