Ship storage progress

--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -549,6 +549,7 @@
     <Xml Include="RPGComponents.xml">
       <SubType>Designer</SubType>
     </Xml>
+    <Xml Include="RPGDockManagement.xml" />
     <Xml Include="RPGLibrary.xml" />
     <Xml Include="GalaxyLibrary.xml" />
     <Xml Include="RPGMembership.xml" />
