Added new ship broker and ship status screens

--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -381,15 +381,20 @@
     <ClCompile Include="CDaimonButtonPainter.cpp" />
     <ClCompile Include="CDaimonList.cpp" />
     <ClCompile Include="CDaimonListPainter.cpp" />
+    <ClCompile Include="CDetailList.cpp" />
     <ClCompile Include="CDockPane.cpp" />
+    <ClCompile Include="CDockScreenCarousel.cpp" />
     <ClCompile Include="CDockScreenCustomItemList.cpp" />
     <ClCompile Include="CDockScreenCustomList.cpp" />
+    <ClCompile Include="CDockScreenDetailsPane.cpp" />
     <ClCompile Include="CDockScreenItemList.cpp" />
     <ClCompile Include="CDockScreenList.cpp" />
     <ClCompile Include="CDockScreenSelector.cpp" />
     <ClCompile Include="CDockScreenStack.cpp" />
     <ClCompile Include="CDockScreenSubjugate.cpp" />
     <ClCompile Include="CGameSession.cpp" />
+    <ClCompile Include="CGCarouselArea.cpp" />
+    <ClCompile Include="CGDetailsArea.cpp" />
     <ClCompile Include="CGItemDisplayArea.cpp" />
     <ClCompile Include="CGItemListDisplayArea.cpp" />
     <ClCompile Include="CGSelectorArea.cpp" />
